--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -156,18 +156,18 @@ input:checked + .slider:before {
 }
 
 /* Rounded sliders */
-/* .slider.round {
+.slider.round {
   border-radius: 34px;
-} */
+}
 
-/* .slider.round:before {
+.slider.round:before {
   border-radius: 50%;
-} */
+}
 
 /* overridden css */
-/* .help-block {
+.help-block {
 	color: #ff0000;
-} */
+}
 
 
 /*Shopping Cart*/
@@ -247,4 +247,14 @@ input:checked + .slider:before {
 		z-index:9999;
 		background:url(../images/pre-loader.gif) 50% no-repeat #fff
 }
+
+.table-responsive{
+	overflow-x:inherit;	
+}
+
+
+.unavailable{
+	color:red;
+}
+
 
